<resources>
    <string name="app_name">Grocery List</string>
    <string name="vote_text">Vote</string>
    <string name="vote_image_desc">An image of a CUTE cat</string>
    <string name="leader_board">Leader Board</string>
    <string name="hint_imageid">Number…</string>
    <string name="hint_name">Name of Grocery</string>
    <string name="hint_desc">Notes about Grocery</string>
    <string name="hint_quantity">Grocery Quantity</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Not Saved: A Required Field Was Empty</string>
    <string name="on_init">First time start: Created two cats</string>
    <string name="recycler_view_image_desc">Temp Image of Cat</string>
    <string name="get_gallery_image">Load From Gallery</string>
    <string name="get_camera_image">Take Picture</string>
    <string name="no_camera_found">Error: No Camera Found</string>
</resources>
