<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/grocery_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/vote_image_desc"
        android:gravity="center"
        android:padding="15dp"
        android:scaleType="centerInside" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/upload_image"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_gallery_image"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/capture_image"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_camera_image"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_grocery_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_name"
        android:inputType="textAutoComplete"
        android:textSize="18sp"
        tools:ignore="Autofill" />
        <!--android:padding="@dimen/small_padding"-->
        <!--android:layout_marginBottom="@dimen/big_padding"-->
        <!--android:layout_marginTop="@dimen/big_padding"-->


    <EditText
        android:id="@+id/edit_grocery_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_desc"
        android:inputType="textAutoComplete"
        android:textSize="18sp"
        tools:ignore="Autofill" />
        <!--android:padding="@dimen/small_padding"-->
        <!--android:layout_marginBottom="@dimen/big_padding"-->
        <!--android:layout_marginTop="@dimen/big_padding"-->


    <EditText
        android:id="@+id/edit_grocery_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_quantity"
        android:inputType="textAutoComplete"
        android:textSize="18sp"
        tools:ignore="Autofill" />
        <!--android:padding="@dimen/small_padding"-->
        <!--android:layout_marginBottom="@dimen/big_padding"-->
        <!--android:layout_marginTop="@dimen/big_padding"-->


    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_save" />
        <!--android:textColor="@color/buttonLabel" />-->

</LinearLayout>